enabled turnserver mobility support

--- a/templates/turnserver/turnserver.conf.erb
+++ b/templates/turnserver/turnserver.conf.erb
@@ -599,7 +599,7 @@ secure-stun
 
 # Mobility with ICE (MICE) specs support.
 #
-#mobility
+mobility
 
 # User name to run the process. After the initialization, the turnserver process
 # will make an attempt to change the current user ID to that user.
