--- a/templates/git/repo.conf.erb
+++ b/templates/git/repo.conf.erb
@@ -1,7 +1,7 @@
 repo <%=@title%>
 <% unless @full_access.empty? -%>
     RW+  =  <%= @full_access.join(' ') -%>
-<%- end -%>
+<%- end %>
 <%- unless @read_only.empty? -%>
     R    =  <%= @read_only.join(' ') %>
 <%- end %>
